fix agent calling

--- a/static/index.html
+++ b/static/index.html
@@ -759,7 +759,7 @@
             </div>
             <hr class="mt-4 mb-4" style="background-color: #555;">
             <div class="text-center">
-                <p class="mb-0">© 2023 LLM Agent 文献处理系统. 保留所有权利.</p>
+                <p class="mb-0">© 2025 AcademicExplorer. 保留所有权利.</p>
             </div>
         </div>
     </footer>
