--- a/static/index.html
+++ b/static/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LLM 驱动的文献检索与综述生成智能体系统</title>
+    <title>Academic Explorer</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
@@ -310,7 +310,7 @@
         <div class="container">
             <a class="navbar-brand" href="#">
                 <i class="fas fa-book-reader me-2"></i>
-                LLM 驱动的文献检索与综述生成智能体系统
+                🔍Academic Explorer
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
@@ -337,8 +337,9 @@
         <!-- 系统概述 -->
         <div class="row mb-5">
             <div class="col-md-8 offset-md-2 text-center">
-                <h1 class="display-5 fw-bold mb-4">LLM 驱动的文献检索与综述生成智能体系统</h1>
-                <p class="lead mb-4">LLM 驱动的文献检索与综述生成智能体系统，集检索与综述分析于一体，提升学术阅读与研究效率</p>
+                <h1 class="display-5 fw-bold mb-4">🔍 Academic Explorer</h1>
+                <h1 class="display-5 fw-bold mb-4">文献研究智能体系统</h1>
+                <p class="lead mb-4">LLM 驱动的文献研究智能体系统，集检索与综述分析于一体，提升学术阅读与研究效率</p>
                 <div class="d-flex justify-content-center gap-3">
                     <a href="#search" class="btn btn-primary btn-lg px-4">开始检索</a>
                     <a href="#synthesis" class="btn btn-outline-primary btn-lg px-4">生成综述</a>
