--- a/static/index.html
+++ b/static/index.html
@@ -706,7 +706,7 @@
                             <i class="fas fa-code text-primary fs-1 mb-3"></i>
                             <h5 class="card-title">开源项目</h5>
                             <p class="card-text">本系统是一个开源项目，欢迎参与贡献代码或提出改进建议。</p>
-                            <a href="#" class="btn btn-outline-primary">访问GitHub仓库</a>
+                            <a href="https://github.com/CYoungG06/AcademicExplorer" class="btn btn-outline-primary">访问GitHub仓库</a>
                         </div>
                     </div>
                     <div class="card">
@@ -714,9 +714,9 @@
                             <h5 class="card-title">联系我们</h5>
                             <p>如果您有任何问题、建议或合作意向，请通过以下方式联系我们：</p>
                             <ul class="list-unstyled">
-                                <li class="mb-2"><i class="fas fa-envelope me-2 text-primary"></i> contact@llmagent-docs.io</li>
-                                <li class="mb-2"><i class="fab fa-twitter me-2 text-primary"></i> @LLMAgentDocs</li>
-                                <li><i class="fas fa-university me-2 text-primary"></i> 计算机科学与技术学院</li>
+                                <li class="mb-2"><i class="fas fa-envelope me-2 text-primary"></i> contact@AcademicExplorer.io</li>
+                                <li class="mb-2"><i class="fab fa-twitter me-2 text-primary"></i> @AcademicExplorer-Docs</li>
+                                <li><i class="fas fa-university me-2 text-primary"></i> XXX</li>
                             </ul>
                         </div>
                     </div>
@@ -730,8 +730,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
-                    <h5 class="footer-title">LLM Agent 文献处理系统</h5>
-                    <p>基于大语言模型的智能文献处理平台，集检索与综述分析于一体，提升学术阅读与研究效率。</p>
+                    <h5 class="footer-title">🔍 Academic Explorer</h5>
+                    <p>LLM 驱动的文献研究智能体系统，集检索与综述分析于一体，提升学术阅读与研究效率。</p>
                 </div>
                 <div class="col-md-2">
                     <h5 class="footer-title">链接</h5>
@@ -753,7 +753,7 @@
                     <h5 class="footer-title">社区</h5>
                     <ul class="list-unstyled">
                         <li><a href="#" class="text-decoration-none text-muted">GitHub</a></li>
-                        <li><a href="#" class="text-decoration-none text-muted">学术论坛</a></li>
+                        <!-- <li><a href="#" class="text-decoration-none text-muted">学术论坛</a></li> -->
                         <li><a href="#" class="text-decoration-none text-muted">反馈与建议</a></li>
                     </ul>
                 </div>
